<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkPython"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lenguajePython"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkJava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkJava" />

    <TextView
        android:id="@+id/textLenguaje"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textLenguaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProgramacion" />

    <TextView
        android:id="@+id/textProgramacion"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textProgramacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNacimiento" />

    <TextView
        android:id="@+id/textNacimiento"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGenero" />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/inputNombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputApellido"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/inputApellido"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNombre" />

    <TextView
        android:id="@+id/textGenero"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputApellido" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonLimpiar"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <RadioButton
        android:id="@+id/radioSi"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/radioSi"
        app:layout_constraintBaseline_toBaselineOf="@+id/textProgramacion"
        app:layout_constraintEnd_toStartOf="@+id/radioNo"
        app:layout_constraintStart_toEndOf="@+id/textProgramacion" />

    <RadioButton
        android:id="@+id/radioNo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/radioNo"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioSi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioSi" />

    <Spinner
        android:id="@+id/spinnerGenero"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/spinnerGenero"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/textGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textGenero" />

    <EditText
        android:id="@+id/inputNacimiento"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/defaultDate"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textNacimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textNacimiento" />

    <CheckBox
        android:id="@+id/checkJava"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lenguajeJava"
        app:layout_constraintBaseline_toBaselineOf="@+id/textLenguaje"
        app:layout_constraintEnd_toStartOf="@+id/checkPython"
        app:layout_constraintStart_toEndOf="@+id/textLenguaje" />

    <CheckBox
        android:id="@+id/checkJS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lenguajeJS"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkGo"
        app:layout_constraintEnd_toStartOf="@+id/checkGo"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lenguajeC"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkCSharp"
        app:layout_constraintEnd_toStartOf="@+id/checkCSharp"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkGo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/LenguajeGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkJS"
        app:layout_constraintTop_toBottomOf="@+id/checkPython" />

    <CheckBox
        android:id="@+id/checkCSharp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/LenguajeCSharp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkC"
        app:layout_constraintTop_toBottomOf="@+id/checkGo" />

</androidx.constraintlayout.widget.ConstraintLayout>